# robovm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  formatter.xml  org.eclipse.jdt.core.prefs  org.eclipse.jdt.ui.prefs  pom.xml
libimobiledevice/: CMakeLists.txt  NOTICE.txt  build.sh  fast_primitive_arrays.i  genbindings.sh  libplist.patch  pom.xml  usbmuxd.patch
libimobiledevice/src/main/native/: LLVM_wrap.c  exports_linux.sym  exports_macosx.sym  libimobiledevice_wrap.c
libimobiledevice/src/main/swig/: libimobiledevice.i
libimobiledevice/src/test/resources/: demo.ipa
libnullvm/src/: CMakeLists.txt  array.c  attribute.c  bc.c  class.c  exception.c  field.c  files.mk  init.c  log.h  map.c  memory.c  method.c  native.c  proxy.c  string.c  thread.c  trampolines-x86_64.s  trampolines.h  unwind.c  vminterface.c
libnullvm/src/portlib/common/shared/: exceptions.c  iohelp.c  utf8decode.c  utf8encode.c
libnullvm/src/portlib/pool/shared/: pool.c
libnullvm/src/portlib/port/shared/: hyerror.c  hyexit.c  hygp.c  hynlshelpers.h  hyport.nls  hystdarg.h  hystr.c  hystsl.c  portnls.h  ut_hyprt.h  ute_pd.h
libnullvm/src/portlib/port/unix/: exports.txt  hyerrorhelpers.c  hyfiletext.c  hyfpu.h  hymmap.c  hymmap.h  hynlshelpers.c  hyosdump.c  hyportptb.c  hysharedhelper.c  hyshmem.c  hyshsem.c  hysysinfo.c  hytime.c  libhyprt.exp
libnullvm/src/portlib/thread/shared/: hythread.c  hythreadinspect.c  hythreadinspect.h  rwmutex.c  threaddef.h
libnullvm/src/portlib/thread/unix/: makefile  (+7 more)
llvm/: CMakeLists.txt  NOTICE.txt  build.sh  codetemplates.xml  download-llvm.sh  genbindings.sh  pom.xml
llvm/patches/: 01-supress_error_failed_to_compute_relocation_X86_64_RELOC_UNSIGNED.patch  02-disable-inlined-subprograms-assert.patch  02-preserve_line_numbers_after_inlining.patch  03-allow-null-variable-die.patch  04-emit-sp-fp-offsets-on-arm.patch  04-emit-sp-fp-offsets-on-thumbv7.patch  05-disable-clang-shared-lib.patch  apply-patches
llvm/src/main/native/: ClangExtra.cpp  ClangExtra.h  LLVMExtra.cpp  LLVMExtra.h  LLVM_wrap.c  exports_linux.sym
llvm/src/main/swig/: LLVM.i
portlib/src/port/unix/: CMakeLists.txt  hyfile.c  hyshmem.h  hyshsem.h  hysl.c  hytty.c
vm/: CMakeLists.txt  MergeStaticLibObjectFiles.cmake  NOTICE.txt  binaries.idx  build.sh  copy-binaries.sh  fetch-binaries.sh  formatter.xml  gc-1.patch  gc-2.patch  make_all_libs.sh  publish-binaries.sh
vm/bc/src/: CMakeLists.txt  MurmurHash3.c  bc.c  classinfo.c  classinfo.h  packed.h
vm/bclib/src/: CMakeLists.txt  MurmurHash3.h  bc.c  bclib.h  classinfo.c  classinfo.h  packed.h
vm/core/include/: jni.h  jni_types.h  nullvm.h  robovm.h
vm/core/include/nullvm/: array.h  attribute.h  class.h  exception.h  field.h  init.h  log.h  memory.h  method.h  native.h  proxy.h  string.h  thread.h  types.h
vm/core/include/robovm/: access.h  array.h  atomic.h  attribute.h  bitvector.h  class.h  exception.h  field.h  hooks.h  init.h  lazy_helpers.h  log.h  memory.h  method.h  monitor.h  mutex.h  native.h  proxy.h  rt.h  signal.h  string.h  thread.h  trycatch.h  types.h  vminterface.h
vm/core/src/: CMakeLists.txt  array.c  attribute.c  bc.c  bitvector.c  call0-darwin-arm64.s  call0-darwin-i386.s  call0-darwin-thumbv7.s  call0-darwin-x86.s  call0-darwin-x86_64.s  call0-linux-i386.s  call0-linux-x86.s  call0-linux-x86_64.s  class.c  debug_hooks.c  eval.c  exception.c  field.c  files.mk  hooks.c  init.c  log.c  memory.c  method.c  monitor.c  native.c  private.h  proxy.c  proxy0-darwin-arm64.s  proxy0-darwin-i386.s  proxy0-darwin-thumbv7.s  proxy0-darwin-x86.s  proxy0-darwin-x86_64.s  proxy0-linux-i386.s  proxy0-linux-x86.s  proxy0-linux-x86_64.s  signal.c  string.c  symbols.darwin  symbols.linux  (+13 more)
vm/core/src/minizip/: README  ioapi.h  unzip.c
vm/core/src/test/: CuTest.c  CuTest.h  test_call0.c  test_proxy0.c  test_trycatch.c
vm/debug/src/: CMakeLists.txt  debug.c
vm/dependencies/: bdwgc.patch
vm/drlvm/: CMakeLists.txt  drlvm-defines.cmake
vm/drlvm/vm/include/: jvmti_types.h
vm/hyprt/include/: gp.h  hycomp.h  hythread.h
vm/hyprt/include/unix/: hysock.h
vm/hyprt/src/: CMakeLists.txt
vm/hyprt/src/common/: CMakeLists.txt
vm/hyprt/src/pool/: CMakeLists.txt
vm/rt/: CMakeLists.txt  Makefile  files.mk
vm/rt/android/: CMakeLists.txt
vm/rt/android/dalvik/: CMakeLists.txt
vm/rt/android/libcore/: CMakeLists.txt
vm/rt/android/libnativehelper/: CMakeLists.txt  JNIHelp.cpp  JniConstants.cpp  JniInvocation.cpp  toStringArray.cpp
vm/rt/nullvm/: CMakeLists.txt  java_lang_Class.c  java_lang_Object.c  java_lang_String.c  java_lang_System.c  java_lang_Thread.c  java_lang_Throwable.c  java_lang_VMClassLoader.c  java_lang_reflect_Constructor.c  java_lang_reflect_Field.c  java_lang_reflect_Method.c  java_lang_reflect_Proxy.c  org_nullvm_rt_VM.c  org_nullvm_rt_bro_Bro.c  org_nullvm_rt_bro_Dl.c  reflection_helpers.c  reflection_helpers.h  sun_misc_Unsafe.c
vm/rt/robovm/: CMakeLists.txt  JARURLProtocol.m  darwin.m  darwin_os_version.m  java_lang_Class.c  java_lang_ClassCache.c  java_lang_Object.c  java_lang_Runtime.c  java_lang_String.c  java_lang_System.c  java_lang_Thread.c  java_lang_Throwable.c  java_lang_VMClassLoader.c  java_lang_ref_Reference.c  java_lang_reflect_AccessibleObject.c  java_lang_reflect_Array.c  java_lang_reflect_Constructor.c  java_lang_reflect_Field.c  java_lang_reflect_Method.c  java_lang_reflect_Proxy.c  java_net_NetworkInterface.c  org_robovm_rt_Signals.c  org_robovm_rt_VM.c  org_robovm_rt_bro_Bro.c  org_robovm_rt_bro_Dl.c  org_robovm_rt_iconv_IconvProvider.c  reflection_helpers.c  reflection_helpers.h  rt.c  sun_misc_Unsafe.c
vm/rt/robovm/minizip/: ioapi.c
vm/rt/src/: CMakeLists.txt  symbols.darwin
vm/rt/src/luni-kernel/: java_lang_Class.c  java_lang_Object.c  java_lang_Runtime.c  java_lang_System.c  java_lang_Throwable.c  java_lang_reflect_Constructor.c  java_lang_reflect_Method.c  java_lang_reflect_Proxy.c  luni-kernel-init.c  org_apache_harmony_kernel_vm_VM.c  org_nullvm_rt_VM.c  org_nullvm_rt_bro_Bro.c  org_nullvm_rt_bro_Dl.c  reflection_helpers.c  reflection_helpers.h  sun_misc_Unsafe.c
(+10448 files in other folders)
